# nyschooldata

./: .Rbuildignore  .gitignore  404.html  CLAUDE.html  CLAUDE.md  DESCRIPTION  EXPANSION.html  EXPANSION.md  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml  wercker.yml
Meta/: vignette.rds
R/: aggregation.R  assess_db.R  assess_growth.R  attainment.R  bedscode.R  cache.R  cohort_growth.R  fake.R  fetch_assessment.R  fetch_directory.R  fetch_enrollment.R  fetch_graduation.R  get_raw_assessment.R  get_raw_enrollment.R  get_raw_graduation.R  globals.R  names.R  nyschooldata-package.R  process_assessment.R  process_enrollment.R  process_graduation.R  proficiency_hist.R  rc_db.R  subgroup_efficacy.R  tidy_assessment.R  tidy_enrollment.R  tidy_graduation.R  util.R  utils.R
articles/: data-quality-qa.html  data-quality-qa.md  district-hooks.html  district-hooks.md  index.html  index.md  newyork-assessment.html  newyork-assessment.md  quickstart.html  quickstart.md
data/: agg_2015.rda  agg_2016.rda
doc/: data-quality-qa.R  data-quality-qa.Rmd  data-quality-qa.html  district-hooks.R  district-hooks.Rmd  district-hooks.html  quickstart.R  quickstart.Rmd  quickstart.html
docs/: 404.html  CLAUDE.html  CLAUDE.md  EXPANSION.html  EXPANSION.md  LICENSE-text.html  LICENSE-text.md  LICENSE.html  NY-GRADUATION-RESEARCH.md  (+9 more)
pynyschooldata/: README.md  __init__.py  core.py  pyproject.toml
pynyschooldata/pynyschooldata/: core.py
(+524 files in other folders)
